--- a/windows/AboutThisPC/AboutThisPC.csproj
+++ b/windows/AboutThisPC/AboutThisPC.csproj
@@ -38,7 +38,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.4654" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250606001" />
+    <PackageReference Include="SharpDX.DXGI" Version="4.2.0" />
     <PackageReference Include="System.Management" Version="9.0.8" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="OverviewPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="MainPage.xaml">
