--- a/windows/AboutThisPC/AboutThisPC.csproj
+++ b/windows/AboutThisPC/AboutThisPC.csproj
@@ -42,6 +42,11 @@
     <PackageReference Include="System.Management" Version="9.0.8" />
   </ItemGroup>
   <ItemGroup>
+    <Page Update="SupportPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
     <Page Update="OverviewPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
