Some settings implementations

--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -55,6 +55,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         storage.h storage.cpp
         binaries.qrc
         data.h data.cpp
+        settings.h settings.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET AboutThisPC APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
